<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="end"
    android:background="@color/text_white_color"
    android:orientation="vertical">

    <TextView
        android:id="@+id/menu_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/menu"
        android:textColor="@color/colorAccent"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/route"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:text="@string/build_route"
        style="@style/Side_Menu_Item"
        app:layout_constraintEnd_toEndOf="@+id/menu_header"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_header" />

    <TextView
        android:id="@+id/list_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Side_Menu_Item"
        android:text="@string/list_locations"
        app:layout_constraintEnd_toEndOf="@+id/menu_header"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/route" />

    <TextView
        android:id="@+id/add_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_location"
        style="@style/Side_Menu_Item"
        app:layout_constraintEnd_toEndOf="@+id/menu_header"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_loc" />

    <TextView
        android:id="@+id/choise_lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choise_lang"
        style="@style/Side_Menu_Item"
        app:layout_constraintEnd_toEndOf="@+id/menu_header"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_loc" />


    <TextView
        android:id="@+id/feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback"
        style="@style/Side_Menu_Item"
        app:layout_constraintEnd_toEndOf="@+id/menu_header"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choise_lang" />

</androidx.constraintlayout.widget.ConstraintLayout>