<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LanguageChoiseFragment">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <com.github.florent37.diagonallayout.DiagonalLayout
            android:id="@+id/diagonalLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:diagonal_angle="10"
            app:diagonal_direction="right"
            app:diagonal_position="top">

            <com.flaviofaria.kenburnsview.KenBurnsView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/start" />

        </com.github.florent37.diagonallayout.DiagonalLayout>

        <Button
            android:id="@+id/btn_start"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:elevation="12dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/start"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/text_white_color" />

    </FrameLayout>


    <ImageView
        android:id="@+id/name"
        android:layout_width="144dp"
        android:layout_height="154dp"
        android:elevation="12dp"
        android:src="@drawable/name"
        app:layout_constraintBottom_toTopOf="@+id/content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.234" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/guide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="16dp"
        android:maxLines="3"
        android:minLines="3"
        android:text="@string/sightseeing"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>