<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/location_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LocationFragment">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.github.florent37.diagonallayout.DiagonalLayout
            android:id="@+id/diagonalLayout"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_marginBottom="24dp"
            app:diagonal_angle="10"
            app:diagonal_direction="right"
            app:diagonal_position="bottom">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never"
                tools:background="@color/colorAccent" />

        </com.github.florent37.diagonallayout.DiagonalLayout>

        <LinearLayout
            android:id="@+id/show_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:clickable="true">

            <ImageButton
                android:id="@+id/btn_show_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:elevation="4dp"
                android:paddingStart="8dp"
                android:paddingTop="6dp"
                android:paddingEnd="8dp"
                android:paddingBottom="6dp"
                android:tint="@color/text_white_color"
                app:srcCompat="@drawable/btn_marker" />

            <TextView
                android:id="@+id/text_btn_show_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginStart="4dp"
                android:text="Показать на карте" />

        </LinearLayout>

    </FrameLayout>

    <com.rd.PageIndicatorView
        android:id="@+id/indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="68dp"
        app:piv_animationType="swap"
        app:piv_animationDuration="200"
        app:piv_interactiveAnimation="true"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:inputType="textMultiLine"
        android:text="Памятник и братская могила воинов 143-го артиллерийского полка 14-й стрелковой дивизии на огневой позиции 6-й героической комсомольской батареи"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:clipChildren="false"
        android:clipToPadding="true"
        android:fillViewport="true"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name">

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/scroll_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutDescription="@xml/location_scene"
            app:showPaths="true">

            <TextView
                android:id="@+id/visual_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:inputType="textMultiLine"
                android:text="@string/visual_desc"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/history"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/visual_desc"
                app:layout_constraintTop_toBottomOf="@+id/visual_desc"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/devoted"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/devoted"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/history"
                app:layout_constraintTop_toBottomOf="@+id/history" />

            <Button
                android:id="@+id/btn_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/history_monument"
                android:textColor="@color/text_white_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/more_arrow"
                style="@style/MSV_ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:rotation="270"
                android:tint="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_history"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/arrow" />

        </androidx.constraintlayout.motion.widget.MotionLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>