<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/location_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.LocationFragment">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.github.florent37.diagonallayout.DiagonalLayout
            android:id="@+id/diagonalLayout"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            app:diagonal_angle="10"
            app:diagonal_direction="right"
            app:diagonal_position="bottom"
            android:layout_marginBottom="24dp">

            <com.asksira.loopingviewpager.LoopingViewPager
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:isInfinite="true"
                app:autoScroll="true"
                app:scrollInterval="5000"
                tools:background="@color/colorAccent"/>

        </com.github.florent37.diagonallayout.DiagonalLayout>

        <LinearLayout
            android:id="@+id/show_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="bottom">

            <ImageButton
                android:id="@+id/btn_show_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/btn_marker"
                android:background="@color/colorAccent"
                android:tint="@color/text_white_color"
                android:paddingStart="8dp"
                android:paddingTop="6dp"
                android:paddingEnd="8dp"
                android:paddingBottom="6dp"
                android:elevation="4dp"/>

            <TextView
                android:id="@+id/text_btn_show_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Показать на карте"
                android:layout_marginStart="4dp"
                android:layout_gravity="bottom"/>

        </LinearLayout>

    </FrameLayout>

    <com.rd.PageIndicatorView
        android:id="@+id/indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="68dp"
        app:piv_animationType="swap"
        app:piv_animationDuration="200"
        app:piv_interactiveAnimation="true"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scroll_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:inputType="textMultiLine"
                android:text="Памятник и братская могила воинов 143-го артиллерийского полка 14-й стрелковой дивизии на огневой позиции 6-й героической комсомольской батареи"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/visual_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:inputType="textMultiLine"
                android:text="@string/visual_desc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/history"
                app:layout_constraintStart_toStartOf="@+id/visual_desc"
                app:layout_constraintTop_toBottomOf="@+id/visual_desc"
                android:textStyle="bold"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/devoted"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/devoted"
                app:layout_constraintStart_toStartOf="@+id/history"
                app:layout_constraintTop_toBottomOf="@+id/history"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:visibility="visible"/>

            <LinearLayout
                android:id="@+id/more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/devoted"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="16dp"
                app:layout_constraintHorizontal_bias="0.5">

                <ImageButton
                    android:id="@+id/more_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/arrow"
                    style="@style/MSV_ImageButton"
                    android:rotation="90"
                    android:tint="@color/colorAccent"
                    android:layout_gravity="center_horizontal" />

                <Button
                    android:id="@+id/btn_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/history_monument"
                    android:backgroundTint="@color/colorAccent"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/text_white_color"
                    android:clickable="true"></Button>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.motion.widget.MotionLayout>